--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "types": ["node", "jest", "@testing-library/jest-dom"],
+    "baseUrl": "src",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
