--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/public-sans": "^5.0.3",
     "@mui/joy": "^5.0.0-alpha.84",
     "axios": "^1.4.0",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
