--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "axios": "^1.4.0",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
