--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.13.0",
+    "react-router-dom": "^6.13.0",
     "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
