--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
     "skipLibCheck": true,
     "types": ["node", "jest", "@testing-library/jest-dom"],
     "baseUrl": "src",
+    "paths": {
+      "$enums/*": ["models/enums/*"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
