--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.13.0",
     "react-router-dom": "^6.13.0",
+    "recoil": "^0.7.7",
     "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
