--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^6.13.0",
     "react-router-dom": "^6.13.0",
     "recoil": "^0.7.7",
+    "usehooks-ts": "^2.9.1",
     "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
